style sheet applied

--- a/week2/web-server/index.html
+++ b/week2/web-server/index.html
@@ -1,10 +1,11 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <title>My first web server! by moe</title>
+      <title>My First Web Page</title>
+      <link rel="stylesheet" type="text/css" href="page.css">
     </head>
     <body>
-      <h1>My first web server</h1>
-      <p>Oh hey, this is my first HTML response!</p>
+      <h1>My First Web Page</h1>
+      <p>Holy crap!, this works!</p>
     </body>
 </html>
